final/images/Part 2/spring-gumball-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    cloud.google.com/neg-status: '{"network_endpoint_groups":{"8080":"k8s1-04366963-default-spring-gumball-service-8080-27819be0"},"zones":["us-central1-c"]}'
  creationTimestamp: "2021-12-13T03:38:25Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:externalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":8080,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: GoogleCloudConsole
    operation: Update
    time: "2021-12-13T03:38:25Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:finalizers:
          .: {}
          v:"service.kubernetes.io/load-balancer-cleanup": {}
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: kube-controller-manager
    operation: Update
    time: "2021-12-13T03:39:06Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:cloud.google.com/neg-status: {}
    manager: glbc
    operation: Update
    time: "2021-12-13T03:41:15Z"
  name: spring-gumball-service
  namespace: default
  resourceVersion: "87630"
  uid: 735d6689-64a5-4bda-b20c-a8fae3c2403c
spec:
  clusterIP: 10.112.1.216
  clusterIPs:
  - 10.112.1.216
  externalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30922
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-gumball
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 34.66.243.208
